Use valid table properties in test
Let `BaseConnectorTest.isReportingWrittenBytesSupported` synthesize
valid table properties (with correct default values). A connector may
depend on property value (either explicit or default).